[r=allenap,rvb][bug=1453730][author=blake-rouse] Re-add the os_distro_select YUI widget. Fix the commissioning script table to be auto hidden by default.

--- a/src/maasserver/static/scss/maas/components/_tables.scss
+++ b/src/maasserver/static/scss/maas/components/_tables.scss
@@ -297,3 +297,14 @@ table {
 .t95 {
     width: 95%;
 }
+
+#commissioning_scripts {
+
+    .script-content.slider {
+        overflow: hidden;
+
+        pre {
+            margin-top: 20px;
+        }
+    }
+}
